--- a/static/global.css
+++ b/static/global.css
@@ -18,3 +18,22 @@ a{
 .hidden{
   display:none !important;
 }
+
+i{
+  width: 32px;
+  height: 32px;
+  background-image: url('/pics.png');
+  display: inline-block;
+}
+.github{background-position: 0 0;}
+.home{background-position: 0 -64px;}
+.questions{background-position: -32px -64px;}
+.edit{background-position: -32px -32px;}
+.photo{background-position: 0 -32px;}
+.upload{background-position: -32px 0;}
+.download{background-position: -64px 0;}
+.show{background-position: -96px -32px;}
+.hide{background-position: -96px 0;}
+.online{background-position: -64px -32px;}
+.offline{background-position: -64px -64px;}
+.saveCloud{background-position: -96px -64px;}
