--- a/static/global.css
+++ b/static/global.css
@@ -1,44 +1,85 @@
-a{
-  transition: color 0.2s ease, border-bottom-color 0.2s ease;
-  border-bottom: dotted 1px;
-  color: inherit;
-  text-decoration: none;
+a {
+	transition:
+		color 0.2s ease,
+		border-bottom-color 0.2s ease;
+	border-bottom: dotted 1px;
+	color: inherit;
+	text-decoration: none;
 }
 
-.hidden{
-  display:none !important;
+.hidden {
+	display: none !important;
 }
-.pointer{
-  cursor: pointer;    
+.pointer {
+	cursor: pointer;
 }
 
-i{
-  width: 32px;
-  height: 32px;
-  background-image: url('/pics.png');
-  display: inline-block;
+i {
+	width: 32px;
+	height: 32px;
+	background-image: url('/pics.png');
+	display: inline-block;
 }
-.edit{background-position: -32px -32px;}
-.photo{background-position: 0 -32px;}
-.io{background-position: 0px -96px;}
-.show{background-position: -96px -32px;}
-.hide{background-position: -96px 0;}
-.online{background-position: -64px -32px;}
-.offline{background-position: -64px -64px;}
-.saveCloud{background-position: -96px -64px;}
-
+.edit {
+	background-position: -32px -32px;
+}
+.photo {
+	background-position: 0 -32px;
+}
+.io {
+	background-position: 0px -96px;
+}
+.show {
+	background-position: -96px -32px;
+}
+.hide {
+	background-position: -96px 0;
+}
+.online {
+	background-position: -64px -32px;
+}
+.offline {
+	background-position: -64px -64px;
+}
+.saveCloud {
+	background-position: -96px -64px;
+}
 
 /* PRIMARY COLOR : slate-900  & dark:slate-100 */
-.primary{color:var(--color-slate-900);}
-.dark .primary{color:var(--color-slate-100);}
-.primaryFill{fill:var(--color-slate-900);}
-.dark .primaryFill{fill:var(--color-slate-100);}
-.primaryStroke{stroke:var(--color-slate-900);}
-.dark .primaryStroke{stroke:var(--color-slate-100);}
+.primary {
+	color: var(--color-slate-900);
+}
+.dark .primary {
+	color: var(--color-slate-100);
+}
+.primaryFill {
+	fill: var(--color-slate-900);
+}
+.dark .primaryFill {
+	fill: var(--color-slate-100);
+}
+.primaryStroke {
+	stroke: var(--color-slate-900);
+}
+.dark .primaryStroke {
+	stroke: var(--color-slate-100);
+}
 /* SECONDARY COLOR : slate-600  & dark:slate-400 */
-.secondary{color:var(--color-slate-600);}
-.dark .secondary{color:var(--color-slate-400);}
-.secondaryFill{fill:var(--color-slate-600);}
-.dark .secondaryFill{fill:var(--color-slate-400);}
-.secondaryStroke{stroke:var(--color-slate-600);}
-.dark .secondaryStroke{stroke:var(--color-slate-400);}
+.secondary {
+	color: var(--color-slate-600);
+}
+.dark .secondary {
+	color: var(--color-slate-400);
+}
+.secondaryFill {
+	fill: var(--color-slate-600);
+}
+.dark .secondaryFill {
+	fill: var(--color-slate-400);
+}
+.secondaryStroke {
+	stroke: var(--color-slate-600);
+}
+.dark .secondaryStroke {
+	stroke: var(--color-slate-400);
+}
